--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "dev": "hardhat run --network localhost scripts/deploy.ts"
+    "dev": "hardhat run --network localhost scripts/deploy.ts",
+    "deploy-testnet": "hardhat run --network optimism_kovan scripts/deploy.ts"
   },
   "keywords": [],
   "author": "",
