delegable configuration + minor changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "typechain/*.ts",
     "typechain/**/*.ts",
     "artifacts/*",
-    "artifacts/**/*"
+    "artifacts/**/*",
+    "contracts/*",
+    "contracts/**/*"
   ],
   "repository": {
     "type": "git",
