--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "hardhat compile",
     "test": "hardhat test",
     "dev": "hardhat run --network localhost scripts/deploy.ts",
-    "deploy-testnet": "hardhat run --network optimism_kovan scripts/deploy.ts"
+    "deploy-testnet": "hardhat run --network optimism_kovan scripts/deploy.ts",
+    "deploy-testnet-matic": "hardhat run --network matic scripts/deploy.ts"
   },
   "files": [
     "typechain/*.ts",
@@ -37,7 +38,7 @@
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^12.20.47",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.6",
