--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wakeuplabs/delegable-token",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "",
   "main": "dist/typechain/index.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "test": "hardhat test",
     "dev": "hardhat run --network localhost scripts/deploy.ts",
     "deploy-testnet": "hardhat run --network optimism_kovan scripts/deploy.ts",
-    "deploy-testnet-matic": "hardhat run --network matic scripts/deploy.ts"
+    "deploy-testnet-matic": "hardhat run --network matic scripts/deploy.ts",
+    "npm:publish": "hardhat compile && npx tsc && npm publish"
   },
   "files": [
     "dist/*",
