Added DelegableTokenGenric with tests

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "hardhat run --network localhost scripts/deploy.ts",
     "deploy-testnet": "hardhat run --network optimism_kovan scripts/deploy.ts",
     "deploy-testnet-matic": "hardhat run --network matic scripts/deploy.ts",
+    "deploy-testnet-matic-generic": "hardhat run --network matic scripts/deployGeneric.ts",
     "npm:publish": "hardhat compile && npx tsc && npm publish"
   },
   "files": [
